--- a/fireworks.html
+++ b/fireworks.html
@@ -45,6 +45,7 @@
 </head>
 <body class="noselect">
 <h1 class="info">Click anywhere to fire! You can also click multiple times.</h1>
+<h4 class="info">This is an experiment to demonstrate my HTML, CSS3 and JS skills.</h4>
 <script>
 //To check if object is an array
 var $isArray = function (obj) {
